--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
         <TITLE>HBNB</TITLE>
@@ -8,7 +9,7 @@
         {% for state in states.values()|sort(attribute="name") %}
             <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
             <UL>
-            {% for city in state.cities.values()|sort(attribute="name") %}
+            {% for city in state.cities|sort(attribute="name") %}
                 <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
             {% endfor %}
             </UL>
